[gd_scene load_steps=16 format=2]

[ext_resource path="res://objects/Board/Board.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/Player/Camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/Board/wall_material.tres" type="Material" id=3]
[ext_resource path="res://objects/Enemy/Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://levels/test.gd" type="Script" id=5]
[ext_resource path="res://objects/Board/cave_material.tres" type="Material" id=6]
[ext_resource path="res://objects/Board/floor_material.tres" type="Material" id=7]
[ext_resource path="res://levels/cave.png" type="Texture" id=8]
[ext_resource path="res://objects/Board/sky_material.tres" type="Material" id=9]

[sub_resource type="BoxShape" id=1]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.3, 0.1, 0.3 )

[sub_resource type="SpatialMaterial" id=4]
albedo_texture = ExtResource( 8 )

[sub_resource type="PlaneMesh" id=5]
material = SubResource( 4 )

[sub_resource type="ConcavePolygonShape" id=6]

[node name="Spatial" type="Spatial"]
script = ExtResource( 5 )

[node name="Camera" parent="." instance=ExtResource( 2 )]
projection = 0
size = 9.0

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.738667, 0.67407, 0, -0.67407, 0.738667, 0, 9.53308, 7.18401 )

[node name="World" type="Spatial" parent="."]

[node name="Board_level_base" parent="World" instance=ExtResource( 1 )]
floor_mat = ExtResource( 7 )

[node name="StaticBody" type="StaticBody" parent="World/Board_level_base"]
transform = Transform( 0.093, 0, 0, 0, 0.118, 0, 0, 0, 1, -4.90927, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="World/Board_level_base/StaticBody"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="World/Board_level_base/StaticBody"]
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="StaticBody2" type="StaticBody" parent="World/Board_level_base"]
transform = Transform( 0.093, 0, 0, 0, 0.118, 0, 0, 0, 1, 0.909299, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="World/Board_level_base/StaticBody2"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="World/Board_level_base/StaticBody2"]
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="StaticBody3" type="StaticBody" parent="World/Board_level_base"]
transform = Transform( -4.06516e-09, 0, -1, 0, 0.118, 0, 0.093, 0, -4.37114e-08, -0.00880665, 0, -0.971397 )

[node name="CollisionShape" type="CollisionShape" parent="World/Board_level_base/StaticBody3"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="World/Board_level_base/StaticBody3"]
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="StaticBody4" type="StaticBody" parent="World/Board_level_base"]
transform = Transform( -4.06516e-09, 0, -1, 0, 0.118, 0, 0.093, 0, -4.37114e-08, -0.00880665, 0, 0.920242 )

[node name="CollisionShape" type="CollisionShape" parent="World/Board_level_base/StaticBody4"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="World/Board_level_base/StaticBody4"]
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="StaticBody5" type="StaticBody" parent="World/Board_level_base"]
transform = Transform( 0.093, 0, 0, 0, 0.118, 0, 0, 0, 1, -4.90927, 0, 1.97452 )

[node name="CollisionShape" type="CollisionShape" parent="World/Board_level_base/StaticBody5"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="World/Board_level_base/StaticBody5"]
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="StaticBody6" type="StaticBody" parent="World/Board_level_base"]
transform = Transform( -4.06516e-09, 0, 1, 0, 0.118, 0, -0.093, 0, -4.37114e-08, -3.99976, 0, 2.95952 )

[node name="CollisionShape" type="CollisionShape" parent="World/Board_level_base/StaticBody6"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="World/Board_level_base/StaticBody6"]
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="Cave" type="Area" parent="World/Board_level_base"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.61573, 0.0129899, 2.64485 )

[node name="CollisionShape" type="CollisionShape" parent="World/Board_level_base/Cave"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0794368, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="World/Board_level_base/Cave"]
transform = Transform( -1.09278e-08, 0, 0.25, 0, 1, 0, -0.25, 0, -1.09278e-08, 0, 0.001, 0 )
mesh = SubResource( 5 )
material/0 = null

[node name="RampBottom" type="StaticBody" parent="World/Board_level_base"]

[node name="CollisionShape" type="CollisionShape" parent="World/Board_level_base/RampBottom"]
shape = SubResource( 6 )

[node name="Board_level_cave" parent="World" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0 )
visible = false
collision_layer = 1024
collision_mask = 1024
floor_mat = ExtResource( 6 )

[node name="StaticBody" type="StaticBody" parent="World/Board_level_cave"]
transform = Transform( 0.093, 0, 0, 0, 0.118, 0, 0, 0, 1, -4.90927, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="World/Board_level_cave/StaticBody"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="World/Board_level_cave/StaticBody"]
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="StaticBody2" type="StaticBody" parent="World/Board_level_cave"]
transform = Transform( 0.093, 0, 0, 0, 0.118, 0, 0, 0, 1, 0.909299, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="World/Board_level_cave/StaticBody2"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="World/Board_level_cave/StaticBody2"]
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="StaticBody3" type="StaticBody" parent="World/Board_level_cave"]
transform = Transform( -4.06516e-09, 0, -1, 0, 0.118, 0, 0.093, 0, -4.37114e-08, -0.00880665, 0, -0.971397 )

[node name="CollisionShape" type="CollisionShape" parent="World/Board_level_cave/StaticBody3"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="World/Board_level_cave/StaticBody3"]
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="StaticBody4" type="StaticBody" parent="World/Board_level_cave"]
transform = Transform( -4.06516e-09, 0, -1, 0, 0.118, 0, 0.093, 0, -4.37114e-08, -0.00880665, 0, 0.920242 )

[node name="CollisionShape" type="CollisionShape" parent="World/Board_level_cave/StaticBody4"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="World/Board_level_cave/StaticBody4"]
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="Board_level_sky" parent="World" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
visible = false
collision_layer = 1024
collision_mask = 1024
floor_mat = ExtResource( 9 )

[node name="StaticBody" type="StaticBody" parent="World/Board_level_sky"]
transform = Transform( 0.093, 0, 0, 0, 0.118, 0, 0, 0, 1, -4.90927, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="World/Board_level_sky/StaticBody"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="World/Board_level_sky/StaticBody"]
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="StaticBody2" type="StaticBody" parent="World/Board_level_sky"]
transform = Transform( 0.093, 0, 0, 0, 0.118, 0, 0, 0, 1, 0.909299, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="World/Board_level_sky/StaticBody2"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="World/Board_level_sky/StaticBody2"]
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="StaticBody3" type="StaticBody" parent="World/Board_level_sky"]
transform = Transform( -4.06516e-09, 0, -1, 0, 0.118, 0, 0.093, 0, -4.37114e-08, -0.00880665, 0, -0.971397 )

[node name="CollisionShape" type="CollisionShape" parent="World/Board_level_sky/StaticBody3"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="World/Board_level_sky/StaticBody3"]
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="StaticBody4" type="StaticBody" parent="World/Board_level_sky"]
transform = Transform( -4.06516e-09, 0, -1, 0, 0.118, 0, 0.093, 0, -4.37114e-08, -0.00880665, 0, 0.920242 )

[node name="CollisionShape" type="CollisionShape" parent="World/Board_level_sky/StaticBody4"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="World/Board_level_sky/StaticBody4"]
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="Hero" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.696399, 0 )

[connection signal="body_entered" from="World/Board_level_base/Cave" to="." method="_on_Cave_body_entered"]
[connection signal="body_exited" from="World/Board_level_base/Cave" to="." method="_on_Cave_body_exited"]
